--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  margin: 0 auto;
   background-color: #ededf0;
   font-family: "Zilla Slab", serif;
-  /*Metodo para eliminar la barra de scroll en el eje X  */
-  overflow: hidden;
   max-width: 1400px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 /*todo:Paleta de colores
@@ -18,43 +18,29 @@ F3ECB0 */
 img {
   max-width: 100%;
 }
-.header {
+/* .header {
   background-color: #a8e890;
-  /* padding: 0.025rem 7%; */
+  overflow: hidden;
+} */
+
+.header {
+  margin-top: 0;
+  padding: 0.025rem 7%;
+  background-color: #a8e890;
+  /*Metodo para eliminar la barra de scroll en el eje X  */
+  overflow: hidden;
 }
 
-/*Metodo para crear la linea   */
-/* @media screen and (min-width: 768px) {
-  .nosotros__section--line {
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
-  }
-} */
-
-/* .header{
-    background: var(--bg);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:1.5rem 7%;
-    border-bottom: var(--border);
-    position: fixed;
-    top:0; left: 0; right: 0;
-    z-index: 1000;
-} */
-
 .header__logo {
-  width: 5rem;
-  padding: 0.5rem 7%;
-  /* padding-left: 7%; */
-  /* padding-top: 0.5rem; */
-  /* padding-left: 7%; */
-  /* margin-top:0.5rem ; */
+  /*Se aplica el tamaño en height para que mantenga el mismo tamaño  */
+  height: 7rem;
 }
 
 .header__toggle-menu {
   position: absolute;
   top: 0.5rem;
   right: 1.5rem;
+  /* filter: invert(1); */
   cursor: pointer;
   height: 40px;
   z-index: 10;
@@ -62,20 +48,19 @@ img {
 
 .header__ul {
   list-style: none;
-  margin-top: 0;
+  margin-top: 4px;
   margin-bottom: 0;
   padding-left: 0;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: #a8e890; */
   background-color: #344d67;
-  /*Posición por defecto del menu  */
   transition: transform 0.3s;
   transform: translateX(100%);
-  position: absolute;
+  position: fixed;
+  left: 0;
   width: 100%;
+  height: 100vh;
 }
 
 /* Clase para que el menu se muestre desde js */
@@ -89,40 +74,33 @@ img {
 }
 .header__a {
   color: #000;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-decoration: none;
+  font-size: 1.3rem;
+  margin: 0 0.5rem;
+  font-weight: 400;
 }
 
 .header__icon {
   display: none;
 }
 
+.header__icon--line {
+  border-bottom: 3px solid #6eccaf;
+}
 /* Todo:Media queries */
 @media screen and (min-width: 768px) {
   .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 0;
-    padding: 0.025rem 7%;
   }
-
-  /* .header{
-    background: var(--bg);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:1.5rem 7%;
-    border-bottom: var(--border);
-    position: fixed;
-    top:0; left: 0; right: 0;
-    z-index: 1000;
-} */
-
   .header__ul {
     flex-direction: row;
     transform: translateX(0);
     background-color: transparent;
+    margin-top: 0;
+    height: auto;
     position: static;
   }
 
@@ -135,9 +113,4 @@ img {
     font-size: 2rem;
     margin-left: 0.8rem;
   }
-
-  .header__icon--line {
-    border-right: 3px solid rgba(0, 0, 0, 0.2);
-  }
 }
-
