--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,18 +6,19 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  --white: #eafbea;
+  --gree: #1f6650;
+  --blue: #6f9a8d;
+  --pink: #ea5e5e;
+}
+
 body {
   margin: 0 auto;
   background-color: #ededf0;
   font-family: "Zilla Slab", serif;
   max-width: 1400px;
 }
-
-/*todo:Paleta de colores
- 344D67
-6ECCAF
-ADE792
-F3ECB0 */
 
 img {
   max-width: 100%;
@@ -26,7 +27,7 @@ img {
 .header {
   margin-top: 0;
   padding: 0.025rem 7%;
-  background-color: #a8e890;
+  background-color: var(--gree);
   /*Metodo para eliminar la barra de scroll en el eje X  */
   overflow: hidden;
   /*!Averiguar porque al colocar stiky se desabilita el menu */
@@ -52,13 +53,13 @@ img {
 
 .header__ul {
   list-style: none;
-  margin-top: 4px;
+  margin-top: 0.2em;
   margin-bottom: 0;
   padding-left: 0;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  background-color: #344d67;
+  background-color: var(--blue);
   transition: transform 0.3s;
   transform: translateX(100%);
   /*!Averiguar porque al colocar position:absolue quedan espacio en blanco */
@@ -78,7 +79,7 @@ img {
   padding: 1rem;
 }
 .header__a {
-  color: #000;
+  color: var(--white);
   text-transform: capitalize;
   text-decoration: none;
   /*!Probar con este tipo de letra desde el celuar para ver como se ve  */
@@ -91,24 +92,25 @@ img {
 
 /*?pseudo clase que se activa cuando tenemos precionado un elemento, generalmente utilizado en resoluciones para dispositivos moviles  */
 .header__a--efec:active {
-  color: #f3ecb0;
-  border-bottom: 0.1rem solid #f3ecb0;
+  color: var(--white);
+  border-bottom: 0.1rem solid var(--pink);
   padding-bottom: 0.5rem;
   transition: 0.2s linear;
 }
 
 .header__icon {
+  color: var(--white);
   display: none;
   cursor: pointer;
 }
 
 .header__icon--efect:hover {
-  color: #f3ecb0;
+  color: var(--blue);
   transition: 0.2s linear;
 }
 
 .header__icon--line {
-  border-bottom: 3px solid #6eccaf;
+  border-bottom: 3px solid var(--pink);
 }
 
 /* header section ends */
@@ -142,7 +144,7 @@ img {
   font-size: calc(1.8rem + 3vw);
   text-transform: uppercase;
   font-weight: 700;
-  color: #ffffff;
+  color: var(--white);
   margin: 0;
   padding-right: 0.5em;
 }
@@ -151,7 +153,7 @@ img {
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #ffffff;
+  color: var(--white);
   padding-right: 0.5em;
 }
 
@@ -176,8 +178,8 @@ img {
 /*?Media querie que funciona solo si el dispositivo tiene un cursor  */
 @media (hover: hover) {
   .header__a--efec:hover {
-    color: #f3ecb0;
-    border-bottom: 0.1rem solid #f3ecb0;
+    color: var(--blue);
+    border-bottom: 0.1rem solid var(--pink);
     padding-bottom: 0.5rem;
     transition: 0.2s linear;
   }
@@ -212,5 +214,9 @@ img {
     display: inline-block;
     font-size: 2rem;
     margin-left: 0.8rem;
+  }
+
+  .header__icon--line {
+    border-bottom: 1px solid var(--pink);
   }
 }
