--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,13 +11,14 @@ html {
   --gree: #1f6650;
   --blue: #6f9a8d;
   --pink: #ea5e5e;
+  --max-width: 1400px;
+  --margin: auto;
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   background-color: #ededf0;
   font-family: "Zilla Slab", serif;
-  max-width: 1400px;
 }
 
 img {
@@ -25,7 +26,9 @@ img {
 }
 /* header section starts  */
 .header {
-  margin-top: 0;
+  max-width: var(--max-width);
+  margin-left: auto;
+  margin-right: auto;
   padding: 0.025rem 7%;
   background-color: var(--gree);
   /*Metodo para eliminar la barra de scroll en el eje X  */
@@ -114,6 +117,14 @@ img {
 
 /* header section ends */
 
+/*Main section starts  */
+
+.main {
+  max-width: var(--max-width);
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*Inicio start  */
 .inicio {
   min-height: 100vh;
@@ -157,6 +168,8 @@ img {
 }
 
 /*Inicio end  */
+
+/* header section ends */
 
 .proyectos {
   height: 100vh;
