--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,16 +26,15 @@ img {
 }
 /* header section starts  */
 .header {
-  max-width: var(--max-width);
-  margin-left: auto;
-  margin-right: auto;
   padding: 0.025rem 7%;
   background-color: var(--gree);
   /*Metodo para eliminar la barra de scroll en el eje X  */
   overflow: hidden;
   /*!Averiguar porque al colocar stiky se desabilita el menu */
-  position: sticky;
-  top: 0;
+  /* position: sticky;
+  top: 0; */
+  position: fixed;
+  width: 100%;
 }
 
 .header__logo {
@@ -146,7 +145,7 @@ img {
 .inicio__content {
   /*Colocar esta resolución para pantallas grandes  */
   max-width: 57rem;
-  padding-top: 3em;
+  padding-top: 12em;
   padding-left: 7%;
 }
 
@@ -199,10 +198,17 @@ img {
 
 @media screen and (min-width: 768px) {
   .header__nav {
+    max-width: 1400px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
   }
+
+  /* max-width: var(--max-width);
+  margin-left: auto;
+  margin-right: auto; */
 
   .header__ul {
     flex-direction: row;
