--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@ html {
   --blue: #6f9a8d;
   --pink: #ea5e5e;
   --size-1400: 1400px;
-  --margin: auto;
-  --size-XL: clamp(2.2rem, calc(-0.12rem + 5.48vw), 4.13rem);
+  --Textsize-XL: clamp(2.2rem, calc(-0.12rem + 5.48vw), 4.13rem);
+  --Textsize-M: clamp(1.2rem, calc(1.01rem + 0.91vw), 1.72rem);
 }
 
 /* Talla XS 
@@ -157,11 +157,10 @@ img {
   max-width: 57rem;
   padding-top: 12em;
   padding-left: 7%;
-  background-color: darkred;
 }
 
 .inicio__h2 {
-  font-size: var(--size-XL);
+  font-size: var(--Textsize-XL);
   text-transform: uppercase;
   font-weight: 700;
   color: var(--white);
@@ -170,11 +169,12 @@ img {
 }
 
 .inicio__p {
-  font-size: 1.4rem;
+  font-size: var(--Textsize-M);
   font-weight: 500;
   line-height: 1.2;
   color: var(--white);
-  padding-right: 0.5em;
+  padding: 1em 0 0.5em;
+  margin: 0;
 }
 
 /*Inicio end  */
@@ -217,10 +217,6 @@ img {
     margin-right: auto;
   }
 
-  /* max-width: var(--max-width);
-  margin-left: auto;
-  margin-right: auto; */
-
   .header__ul {
     flex-direction: row;
     align-items: center;
@@ -230,7 +226,6 @@ img {
     margin-top: 0;
     height: auto;
     position: static;
-    /* width: 100%; */
   }
 
   .header__a {
