--- a/styles/styles.css
+++ b/styles/styles.css
@@ -354,6 +354,21 @@ img {
   color: white;
 }
 
+.button {
+  cursor: pointer;
+  padding: 1em 2em;
+  background-color: var(--white);
+  border: var(--pink) var(--line);
+  font-size: 1rem;
+}
+
+.button:hover {
+  background-color: var(--blue);
+}
+
+/*?Contacto section ends */
+
+/*?Footer section ends */
 .footer {
   text-align: center;
   background-color: black;
@@ -365,8 +380,7 @@ img {
 .footer__adress {
   margin: 2em 0;
 }
-
-/*? Contacto section ends */
+/*?Footer section starts */
 
 /* Todo:Media queries */
 
